holy CPS, I got stepping working and the interpreter is now unreadable

--- a/lettuce/playground/playground.css
+++ b/lettuce/playground/playground.css
@@ -54,11 +54,13 @@ h1 {
   border-radius: 5px;
   padding: 2px;
   cursor: default;
-  transition: transform .2s;
+  transition: all .2s;
   transform: scale(1);
 }
-.rendered-tree-node:hover {
+.rendered-tree-node:hover, .rendered-tree-node.highlight {
   transform: scale(1.1);
+  background: teal;
+  color: white;
 }
 
 #toolbar {
