--- a/lettuce/playground/playground.css
+++ b/lettuce/playground/playground.css
@@ -3,9 +3,11 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  background: hsl(215, 100%, 95%);
 }
 h1 {
-  background: #ddd;
+  background: #4C97FF;
+  color: white;
   padding: 5px;
   font-weight: 100;
   text-align: center;
@@ -15,54 +17,84 @@ h1 {
 #main {
   flex-grow: 1;
   display: flex;
+  padding: 0 10px;
 }
-.col {
+.col, .row {
   flex: 1;
   flex-grow: 1;
   display: flex;
-  width: calc(100vw / 3);
   flex-direction: column;
 }
+#col-2 {
+  min-width: calc(100vw / 3);
+}
+#col-3 {
+  max-width: calc(100vw / 3);
+}
 .gutter {
-  background: #ddd;
+  background: hsl(215, 100%, 95%);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.gutter::after {
+  content: ".\00a0.\00a0.";
+  color: #3373CC;
+  font-weight: bold;
+  text-align: center;
+}
+.gutter-vertical {
+  cursor: row-resize;
+}
+.gutter-horizontal {
   cursor: col-resize;
+  width: 10px;
+}
+.gutter-horizontal::after {
+  transform: rotate(-90deg);
+  transform-origin: 0 10%;
 }
 
-.col > h2 {
-  background: #ddd;
+h2 {
+  color: #3373CC;
   font-weight: 100;
   text-align: center;
   margin: 0;
   padding: 5px;
 }
 .col-content {
+  background: white;
   flex-grow: 1;
   position: relative;
   overflow: scroll;
+  border: 1px solid #c6c6c6;
+  border-radius: 10px;
 }
-
-/*.col-content > * {
-  width: 100%;
-  overflow: scroll;
-  position: relative;
-  height: 100%;
-}*/
+.col > .col-content,
+.row:last-child > .col-content {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 0;
+  padding-bottom: 0;
+}
 
 
 .rendered-tree-node {
   font-size: 10pt;
-  background: lightblue;
-  border: 1px solid teal;
+  color: white;
+  font-weight: 500;
+  background: #4C97FF;
+  border: 1px solid #3373CC;
   border-radius: 5px;
-  padding: 2px;
+  padding: 4px;
   cursor: default;
   transition: all .2s;
   transform: scale(1);
 }
 .rendered-tree-node:hover, .rendered-tree-node.highlight {
   transform: scale(1.1);
-  background: teal;
-  color: white;
+  background: #3373CC;
 }
 
 #toolbar {
@@ -73,12 +105,12 @@ h1 {
 }
 
 #toolbar button {
-  width: 50px;
-  height: 50px;
   margin: 0 2.5px;
   appearance: none;
   background: white;
   border: 1px solid #bbb;
+  border-radius: 5px;
+  padding: 7px 10px;
   text-align: center;
   transition: transform .2s;
   transform: scale(1);
@@ -90,7 +122,45 @@ h1 {
   transform: scale(1.1);
 }
 
-#results {
+#results-wrapper {
   padding: 5px;
+  overflow: scroll;
+}
+#errors {
   margin: 0;
+}
+
+#env {
+  padding: 10px;
+}
+.env-scope {
+  border-radius: 10px;
+  background: #fff3dd;
+  border: 1px solid #FFAB19;
+  padding: 10px;
+  padding-top: 25px;
+  margin-bottom: 10px;
+  position: relative;
+}
+.env-scope::before {
+  content: 'Scope';
+  color: #CF8B17;
+  font-size: 10pt;
+  position: absolute;
+  top: 6px;
+  left: 10px;
+}
+.env-binding:not(:last-child) {
+  margin-bottom: 4px;
+}
+
+.lettuce-value {
+  font-size: 10pt;
+  background: #FFAB19;
+  border: 1px solid #CF8B17;
+  padding: 4px;
+  border-radius: 5px;
+  display: inline-block;
+  color: white;
+  font-weight: 500;
 }
